@@ -1,3 +1,0 @@
-MD5 66c938b9cdfc7f16c77e960273d34c7b eselect-emacs-0.1.tar.bz2 7345
-RMD160 e4f0d09db620dfad1947af7003f6071e60bd2dc2 eselect-emacs-0.1.tar.bz2 7345
-SHA256 21ebc83033a7eb0fc054301fd9f79cb3e18eaf05e65671c0b9668c0a4678b4c0 eselect-emacs-0.1.tar.bz2 7345
