@@ -1,3 +1,0 @@
-MD5 eb9753d6175ebcc703e43e189496a88e eselect-emacs-0.2.tar.bz2 7628
-RMD160 40bc44061b37bece8ac493e2903b5de49cf177de eselect-emacs-0.2.tar.bz2 7628
-SHA256 6a43692cb63ced74abb82298dc98fc6c0e0d7b9a9eae8ae9d563f3051f2ab587 eselect-emacs-0.2.tar.bz2 7628
