@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  -eselect-emacs-0.1.ebuild, -eselect-emacs-0.2.ebuild,
+  eselect-emacs-0.4.ebuild:
+  Update desktop database. Old versions removed.
+
 *eselect-emacs-0.4 (22 Mar 2007)
 
   22 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
